--- a/Web-Files-2/"Hello Me".html
+++ b/Web-Files-2/"Hello Me".html
@@ -11,7 +11,7 @@
       <h2>About Me</h2>
       <p>Madison Gallagher</p>
       <p>She, Her, Hers</p>
-      <p>Originally, I am from England; I moved to the United States in 2014. I love to travel and be with the people I love.</p>
+      <p>I  am a senior studying advertising with a minor in both Geography and Tam. Originally, I am from England; I moved to the United States in 2014. I love to travel and be with the people I love.</p>
       <h3>Goals</h3>
       <p>Be a confident website builder and learn new things.</p>
       <section id="footer">
