--- a/Week3/EncyclopediaPage.html
+++ b/Week3/EncyclopediaPage.html
@@ -8,7 +8,7 @@
       <h1>Sharks</h1>
       <h3>Finny Faces</h3>
       <p><a href="footer">Go to end</a></p>
-      <a href="https://www.google.com"><img src="Assets/SharkFaces.pdf" style="width:30vw" alt="Shark Faces."/></a>
+      <a href="https://www.discovery.com/shark-week"><img src="Assets/SharkFaces.pdf" style="width:30vw" alt="Shark Faces."/></a>
       <h2>Sharks are Symbols of Opportunity and Adventure</h2>
       <h4>Tidal Truths</h4>
       <p>Many attributes make Sharks stand out as a species that deserve a whole week - Shark Week. Sharks have no bones, therefore, sharks use their gills to filter oxygen from the water. Although they do not have bones, they have special electroreceptor organs. These organs allow the shark to sense electromagnetic fields and temperature shifts in the ocean. The majority of sharks have to continue moving in this ocean in order to pump water over their gills - some species have a spiracle that allows them to pull water into their respiratory system.</p>
