--- a/Week3/EncyclopediaPage.html
+++ b/Week3/EncyclopediaPage.html
@@ -14,7 +14,10 @@
       <p>Many attributes make Sharks stand out as a species that deserve a whole week - Shark Week. Sharks have no bones, therefore, sharks use their gills to filter oxygen from the water. Although they do not have bones, they have special electroreceptor organs. These organs allow the shark to sense electromagnetic fields and temperature shifts in the ocean. The majority of sharks have to continue moving in this ocean in order to pump water over their gills - some species have a spiracle that allows them to pull water into their respiratory system.</p>
       <p>Sharks go into a trance when flipped upside down - this is called tonic immobility. Scientists flip sharks upside down when doing studies and count the rings on their vertebrae to age sharks. Saying this, sharks have appeared in the ocean for around 455 million years. In regard to whale sharks, each spot pattern is unique as a fingerprint.</p>
       <h5>Sea, Now You Know.</h5>
+      </section>
       <section id="footer">
+        <h5>Thanks for reading.</h5>
       <p><a href="#pagetop">Back to top</a></p>
+      </section>
     </body>
   </html>
