--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
   <body>
     <section id="pagetop">
       <p><a href="footer">Go to end</a></p>
+
     <h1>Hello Me</h1>
     <img src="Week3/Assets/P1011407.JPG" style="width:30vw" alt="Me in Puerto Rico."/>
+
+    <section>
     <h2>About Me</h2>
     <p>Madison Gallagher</p>
     <p>She, Her, Hers</p>
     <p>I am a Senior studying Advertising with a minor in both Geography and TAM. Originally, I am from England; I moved to the United States in 2014. I love to travel and be with the people I love</p>
     <h3>Goals</h3>
     <p>Be a confident website builder and learn new things</p>
+    </section>
 
     <h4>My Work So far</h4>
 
