--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello Me</h1>
     <img src="Week3/Assets/P1011407.JPG" style="width:30vw" alt="Me in Puerto Rico."/>
 
-    <section>
+    <section id="AboutMe">
     <h2>About Me</h2>
     <p>Madison Gallagher</p>
     <p>She, Her, Hers</p>
