--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <html lang="en">
   <head>
     <title>Hello Me</title>
+
+    <link rel="stylesheet" href="Week4/2style.css">
+
+
   </head>
   <body>
     <section id="pagetop">
       <p><a href="footer">Go to end</a></p>
+    </section>
 
     <h1>Hello Me</h1>
     <img src="Week3/Assets/P1011407.JPG" style="width:30vw" alt="Me in Puerto Rico."/>
@@ -21,8 +26,8 @@
     </section>
 
     <h4>My Work So far</h4>
-
     <a href="Week3/EncyclopediaPage.html" target="_blank">Week 3 Recitation</a>
 
     <section id="footer"/>
       <p><a href="#pagetop">Back to top</a></p>
+    </section>
