--- a/Week4/ClassNotes.html
+++ b/Week4/ClassNotes.html
@@ -3,7 +3,7 @@
 <head>
   <title>Week 4: CSS 1</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="1style.css">
   <!--Href is a .file whereas rel refrences something-->
 
 </head>
