--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <head>
     <title>Hello Me</title>
 
-    <link rel="stylesheet" href="Week4/2style.css">
-
+    <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
