--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </section>
 
     <h1>Hello Me</h1>
-    <img src="Week3/Assets/P1011407.JPG" style="width:30vw" alt="Me in Puerto Rico."/>
+    <img src="Week3/Assets/P1011407.JPG" alt="Me in Puerto Rico."/>
 
     <section id="AboutMe">
     <h2>About Me</h2>
