--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
     <h1>Hello Me</h1>
     <img src="Week3/Assets/P1011407.JPG" alt="Me in Puerto Rico."/>
 
+    <h2>My Work So far</h2>
+    <a href="Week3/EncyclopediaPage.html" target="_blank">Week 3 Recitation</a>
+
     <section id="AboutMe">
-    <h2>About Me</h2>
-    <p>Madison Gallagher</p>
-    <p>She, Her, Hers</p>
+    <h3>About Me</h3>
+    <p>Name: Madison Gallagher</p>
+    <p>Pronouns: She, Her, Hers</p>
+
+
+
     <p>I am a Senior studying Advertising with a minor in both Geography and TAM. Originally, I am from England; I moved to the United States in 2014. I love to travel and be with the people I love</p>
 
 
-    <h3>Goals</h3>
+    <h4>Goals</h4>
     <p>Be a confident website builder and learn new things</p>
     </section>
 
-    <h4>My Work So far</h4>
-    <a href="Week3/EncyclopediaPage.html" target="_blank">Week 3 Recitation</a>
 
     <section id="footer"/>
       <p><a href="#pagetop">Back to top</a></p>
