--- a/index.html
+++ b/index.html
@@ -15,22 +15,30 @@
     <h1>Hello Me</h1>
     <img src="Week3/Assets/P1011407.JPG" alt="Me in Puerto Rico."/>
 
-    <h2>My Work So far</h2>
-    <a href="Week3/EncyclopediaPage.html" target="_blank">Week 3 Recitation</a>
+<p id="Work">
+    <span>
+    My Work So Far</span>
 
-    <section id="AboutMe">
+    <br><a href="Week3/EncyclopediaPage.html" target="_blank">Week 3 Recitation</a>
+</p>
+
     <h3>About Me</h3>
+    <section id="AboutMe">
     <p>Name: Madison Gallagher</p>
     <p>Pronouns: She, Her, Hers</p>
+  </section>
 
+    <h4>Who Again?</h4>
+    <section id="Who">
+    <p>I am a Senior studying Advertising with a minor in both Geography and TAM.
+    <p>Originally, I am from England; I moved to the United States in 2014.</p>
+    <p>I love to travel and be with the people I love.</p>
+  </section>
 
-
-    <p>I am a Senior studying Advertising with a minor in both Geography and TAM. Originally, I am from England; I moved to the United States in 2014. I love to travel and be with the people I love</p>
-
-
-    <h4>Goals</h4>
-    <p>Be a confident website builder and learn new things</p>
-    </section>
+    <section id="Goals">
+    <h5>Goals</h5>
+    <p>Be a confident website builder and learn new things.</p>
+  </section>
 
 
     <section id="footer"/>
