--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
 <html lang="en">
   <head>
     <title>Hello Me</title>
-
     <link rel="stylesheet" href="style.css">
-
   </head>
+
   <body>
-    <section id="pagetop">
-      <p><a href="footer">Go to end</a></p>
+
+    <section id="Header">
+      <h1>Hello Me</h1>
     </section>
 
-    <h1>Hello Me</h1>
-    <img src="Week3/Assets/P1011407.JPG" alt="Me in Puerto Rico."/>
+    <section id="pagetop">
+      <p><a href="footer">Go to end</a></p>
+  </section>
 
+    <section id="MokuSurf"> 
+    <img src="Week3/Assets/P1011407.JPG" alt="Me in Puerto Rico."/>
+  </section>
+
+  <section>
 <p id="Work">
     <span>
     My Work So Far</span>
-
     <br><a href="Week3/EncyclopediaPage.html" target="_blank">Week 3 Recitation</a>
 </p>
+  </section>
 
-    <h3>About Me</h3>
+<h3>About Me</h3>
     <section id="AboutMe">
     <p>Name: Madison Gallagher</p>
     <p>Pronouns: She, Her, Hers</p>
@@ -39,7 +45,6 @@
     <h5>Goals</h5>
     <p>Be a confident website builder and learn new things.</p>
   </section>
-
 
     <section id="footer"/>
       <p><a href="#pagetop">Back to top</a></p>
