--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p><a href="footer">Go to end</a></p>
   </section>
 
-    <section id="MokuSurf"> 
+    <section id="MokuSurf">
     <img src="Week3/Assets/P1011407.JPG" alt="Me in Puerto Rico."/>
   </section>
 
@@ -46,6 +46,6 @@
     <p>Be a confident website builder and learn new things.</p>
   </section>
 
-    <section id="footer"/>
+    <section id="footer">
       <p><a href="#pagetop">Back to top</a></p>
     </section>
