--- a/Week6/index2.html
+++ b/Week6/index2.html
@@ -18,7 +18,7 @@
 
 <script>
   console.log("javascript working");
-  document.getElementById("mrjoker").addEventListener("click",function(){alert("Hopefully you hate the below jokes. Mwah hah hah")})
+  document.getElementById("mrjoker").addEventListener("click",function(){alert("Madness, as you know, is a lot like gravity, all it takes is a little push.")})
 </script>
 
 <section id="jokes">
