--- a/Week6/index2.html
+++ b/Week6/index2.html
@@ -12,7 +12,7 @@
 </section>
 
 <section id="joker">
-  <h2>I Would Listen...<h2>
+  <h2>I Would Listen...</h2>
   <button id="mrjoker">Push Me</button>
 </section>
 
