--- a/MidTerm/index.html
+++ b/MidTerm/index.html
@@ -4,10 +4,25 @@
   <title>To Breathe</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class='cut-text'>Welcome</div>
+<body onload="startGame()">
+<h1>Welcome.</h1>
 
+<script>
+function startGame(){
+  myGameArea.start();
+  myGamePiece = new component(30, 30, "#39B278", 10, 120);
+}
 
+var myGameArea = {
+  canvas : document.createElement("canvas")
+  start: function() {
+    this.canvas.width = 480;
+    this.canvas.height = 270;
+    this.context = this.canvas.getContext("2d");
+    document.body.insertBefore(this.canvas,
+  document.body.childNodes[0]);
+  }
+}
 
 
 
