--- a/MidTerm/index.html
+++ b/MidTerm/index.html
@@ -3,11 +3,18 @@
 <head>
   <title>To Breathe</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Reenie+Beanie&family=Zen+Kurenaido&display=swap" rel="stylesheet">
 </head>
-<body onload="startGame()">
-<h1>Welcome.</h1>
+<body>
+<h1>Breathe.</h1>
 
-<script>
+
+<div class="zoom-in-out-circle"></div>
+
+<!-- <p id='wisewords'>Smile. Transform. Divine. Airy. Peace. Mindfulness. Ethereal. Awaken. Confidence. Serendipity. Love. Culture. Soul. Light. Zen. Happiness. Truth. Spirituality. Becoming. Chakra. Present. Earth. Surrender. Calm. Eunoia. Meditation. Paradise. Energy. Here.</p> -->
+
+
+<!-- <script>
 function startGame(){
   myGameArea.start();
   myGamePiece = new component(30, 30, "#39B278", 10, 120);
@@ -23,9 +30,10 @@ var myGameArea = {
   document.body.childNodes[0]);
   }
 }
+</script> -->
+<p id='wisewords'>Smile. Transform. Divine. Airy. Peace. Mindfulness. Ethereal. Awaken. Confidence. Serendipity. Love. Culture. Soul. Light. Zen. Happiness. Truth. Spirituality. Becoming. Chakra. Present. Earth. Surrender. Calm. Eunoia. Meditation. Energy. Here.</p>
 
-
-
+.container
 
 </body>
 </html>
