--- a/Self Care/index.html
+++ b/Self Care/index.html
@@ -4,35 +4,185 @@
   <title>To Breathe</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Reenie+Beanie&family=Zen+Kurenaido&display=swap" rel="stylesheet">
+
 </head>
 <body>
-<h1>Breathe.</h1>
+<p id='wisewords'>Smile. Transform. Divine. Airy. Peace. Mindfulness. Ethereal. Awaken. Confidence. Serendipity. Love. Culture. Soul. Light. Zen. Happiness. Truth. Spirituality. Becoming. Chakra. Present. Earth. Surrender. Calm. Eunoia. Meditation. Energy. Here.</p>
 
+
+<section id="head">
+  <h1>Breathe.</h1>
+</section>
 
 <div class="zoom-in-out-circle"></div>
 
-<!-- <p id='wisewords'>Smile. Transform. Divine. Airy. Peace. Mindfulness. Ethereal. Awaken. Confidence. Serendipity. Love. Culture. Soul. Light. Zen. Happiness. Truth. Spirituality. Becoming. Chakra. Present. Earth. Surrender. Calm. Eunoia. Meditation. Paradise. Energy. Here.</p> -->
+<section id="tabs">
+  <div class="day">
 
+  </div>
 
-<!-- <script>
-function startGame(){
-  myGameArea.start();
-  myGamePiece = new component(30, 30, "#39B278", 10, 120);
-}
+  <div class="day">
 
-var myGameArea = {
-  canvas : document.createElement("canvas")
-  start: function() {
-    this.canvas.width = 480;
-    this.canvas.height = 270;
-    this.context = this.canvas.getContext("2d");
-    document.body.insertBefore(this.canvas,
-  document.body.childNodes[0]);
-  }
-}
-</script> -->
-<p id='wisewords'>Smile. Transform. Divine. Airy. Peace. Mindfulness. Ethereal. Awaken. Confidence. Serendipity. Love. Culture. Soul. Light. Zen. Happiness. Truth. Spirituality. Becoming. Chakra. Present. Earth. Surrender. Calm. Eunoia. Meditation. Energy. Here.</p>
+  </div>
 
+  <div class="day">
+
+  </div>
+
+  <div class="day">
+
+  </div>
+
+  <div class="day">
+
+  </div>
+
+  <div class="day">
+
+  </div>
+
+  <div class="day">
+
+  </div>
+</section>
+
+<section id='items'>
+  <div id="image"></div>
+
+  <div id="day1menu" class="menu">
+    <div class="first">
+      <h3>Breathe.</h3>
+    </div>
+    <div class="dawn">
+      <h4>Dawn</h4>
+      <h5>Say Bye To Electronics</h5>
+    </div>
+    <div class="noon">
+      <h4>Noon</h4>
+      <h5>Gym - Just Do It</h5>
+    </div>
+    <div class="dusk">
+      <h4>Dusk</h4>
+      <h5>Sit In Nature</h5>
+    </div>
+  </div>
+
+  <div id="day2menu" class="menu">
+    <div class="first">
+      <h3>Breathe.</h3>
+    </div>
+    <div class="dawn">
+      <h4>Dawn</h4>
+      <h5>Sigh Sigh Sigh</h5>
+    </div>
+    <div class="noon">
+      <h4>Noon</h4>
+      <h5>Head To A Park</h5>
+    </div>
+    <div class="dusk">
+      <h4>Dusk</h4>
+      <h5>Engage in a Small Act of Kindness</h5>
+    </div>
+  </div>
+
+  <div id="day3menu" class="menu">
+    <div class="first">
+      <h3>Breathe.</h3>
+    </div>
+    <div class="dawn">
+      <h4>Dawn</h4>
+      <h5>Notice Your Body</h5>
+    </div>
+    <div class="noon">
+      <h4>Noon</h4>
+      <h5>Do Some Gentle Stretching</h5>
+    </div>
+    <div class="dusk">
+      <h4>Dusk</h4>
+      <h5>Meditate</h5>
+    </div>
+  </div>
+
+  <div id="day4menu" class="menu">
+    <div class="first">
+      <h3>Breathe.</h3>
+    </div>
+    <div class="dawn">
+      <h4>Dawn</h4>
+      <h5>Walk Outside</h5>
+    </div>
+    <div class="noon">
+      <h4>Noon</h4>
+      <!-- add link -->
+      <h5>Rest Your Legs On a Wall</h5>
+    </div>
+    <div class="dusk">
+      <h4>Dusk</h4>
+      <h5>Read Something Funny</h5>
+    </div>
+  </div>
+
+  <div id="day5menu" class="menu">
+    <div class="first">
+      <h3>Breathe.</h3>
+    </div>
+    <div class="dawn">
+      <h4>Dawn</h4>
+      <h5>Go For a Run/h5>
+    </div>
+    <div class="noon">
+      <h4>Noon</h4>
+      <!-- add link -->
+      <h5>Eat a Big,Yummy Meal</h5>
+    </div>
+    <div class="dusk">
+      <h4>Dusk</h4>
+      <h5>Put On Some Music and Dance</h5>
+    </div>
+  </div>
+
+  <div id="day6menu" class="menu">
+    <div class="first">
+      <h3>Breathe.</h3>
+    </div>
+    <div class="dawn">
+      <h4>Dawn</h4>
+      <h5>Listen to Music</h5>
+    </div>
+    <div class="noon">
+      <h4>Noon</h4>
+      <!-- add link -->
+      <h5>Call a Friend</h5>
+    </div>
+    <div class="dusk">
+      <h4>Dusk</h4>
+      <h5>Go To a Body of Water</h5>
+    </div>
+  </div>
+
+  <div id="day7menu" class="menu">
+    <div class="first">
+      <h3>Breathe.</h3>
+    </div>
+    <div class="dawn">
+      <h4>Dawn</h4>
+      <h5>Meander Around Town</h5>
+    </div>
+    <div class="noon">
+      <h4>Noon</h4>
+      <!-- add link -->
+      <h5>Sit in Nature</h5>
+    </div>
+    <div class="dusk">
+      <h4>Dusk</h4>
+      <h5>Light a Candle</h5>
+      <h5>Take a Bath</h5>
+    </div>
+  </div>
+
+</section>
+
+<script type="text/javascript" src="index.js"></script>
 
 </body>
 </html>
