--- a/Self Care/index.html
+++ b/Self Care/index.html
@@ -13,8 +13,8 @@
 <section id="head">
   <h1>Breathe.</h1>
 </section>
-
-<div class="zoom-in-out-circle"></div>
+  <div class="zoom-in-out-circle"></div>
+</section>
 
 <section id="tabs">
   <div class="day">
@@ -46,10 +46,11 @@
   </div>
 </section>
 
-<section id='items'>
-  <div id="image"></div>
 
-  <div id="day1menu" class="menu">
+<section id='items'>
+  <div id="image">
+  </div>
+  <div id="Day1menu" class="menu">
     <div class="first">
       <h3>Breathe.</h3>
     </div>
@@ -67,7 +68,7 @@
     </div>
   </div>
 
-  <div id="day2menu" class="menu">
+  <div id="Day2menu" class="menu">
     <div class="first">
       <h3>Breathe.</h3>
     </div>
@@ -85,7 +86,7 @@
     </div>
   </div>
 
-  <div id="day3menu" class="menu">
+  <div id="Day3menu" class="menu">
     <div class="first">
       <h3>Breathe.</h3>
     </div>
@@ -103,7 +104,7 @@
     </div>
   </div>
 
-  <div id="day4menu" class="menu">
+  <div id="Day4menu" class="menu">
     <div class="first">
       <h3>Breathe.</h3>
     </div>
@@ -113,7 +114,6 @@
     </div>
     <div class="noon">
       <h4>Noon</h4>
-      <!-- add link -->
       <h5>Rest Your Legs On a Wall</h5>
     </div>
     <div class="dusk">
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <div id="day5menu" class="menu">
+  <div id="Day5menu" class="menu">
     <div class="first">
       <h3>Breathe.</h3>
     </div>
@@ -132,7 +132,6 @@
     </div>
     <div class="noon">
       <h4>Noon</h4>
-      <!-- add link -->
       <h5>Eat a Big,Yummy Meal</h5>
     </div>
     <div class="dusk">
@@ -141,7 +140,7 @@
     </div>
   </div>
 
-  <div id="day6menu" class="menu">
+  <div id="Day6menu" class="menu">
     <div class="first">
       <h3>Breathe.</h3>
     </div>
@@ -151,7 +150,6 @@
     </div>
     <div class="noon">
       <h4>Noon</h4>
-      <!-- add link -->
       <h5>Call a Friend</h5>
     </div>
     <div class="dusk">
@@ -160,7 +158,7 @@
     </div>
   </div>
 
-  <div id="day7menu" class="menu">
+  <div id="Day7menu" class="menu">
     <div class="first">
       <h3>Breathe.</h3>
     </div>
@@ -170,7 +168,6 @@
     </div>
     <div class="noon">
       <h4>Noon</h4>
-      <!-- add link -->
       <h5>Sit in Nature</h5>
     </div>
     <div class="dusk">
