--- a/Self Care/index.html
+++ b/Self Care/index.html
@@ -7,14 +7,14 @@
 
 </head>
 <body>
-<p id='wisewords'>Smile. Transform. Divine. Airy. Peace. Mindfulness. Ethereal. Awaken. Confidence. Serendipity. Love. Culture. Soul. Light. Zen. Happiness. Truth. Spirituality. Becoming. Chakra. Present. Earth. Surrender. Calm. Eunoia. Meditation. Energy. Here.</p>
+<p id='wisewords'>Smile. Transform. Divine. Airy. Peace. Mindfulness. Understand. Open. Allow. Be. Clarity. Please. Appreciate. Sacrifice. Time. Care. Love. Listen. Ethereal. Awaken. Confidence. Serendipity. Love. Culture. Soul. Light. Zen. Happiness. Truth. Spirituality. Becoming. Chakra. Present. Earth. Surrender. Calm. Eunoia. Meditation. Energy. Here.</p>
 
 
 <section id="head">
   <h1>Breathe.</h1>
 </section>
-  <div class="zoom-in-out-circle"></div>
-</section>
+
+<div class="zoom-in-out-circle"></div>
 
 <section id="tabs">
   <div class="day">
@@ -128,7 +128,7 @@
     </div>
     <div class="dawn">
       <h4>Dawn</h4>
-      <h5>Go For a Run/h5>
+      <h5>Go For a Run</h5>
     </div>
     <div class="noon">
       <h4>Noon</h4>
