--- a/Week10/index.html
+++ b/Week10/index.html
@@ -9,7 +9,7 @@
 
 <section id="fashion">
   <h2>VOGUE. TREND. CRAZE. RAGE. MANIA. MODE. FAD. FANCY. CHIC. IN. STAPLE. LOOK. STYLE.</h2>
-  <h1>FASHION FRENZY</h1>
+  <h1>FASHION FRENZIE</h1>
 </section>
 
 <section id="reality">
