--- a/Week10/index.html
+++ b/Week10/index.html
@@ -46,29 +46,29 @@
 
 <div class="row">
   <div class="column">
-    <img src="adele.jpg">
-    <img src="amanda.jpg">
-    <img src="bella.jpg">
-    <img src="bieber.jpg">
-    <img src="harry.jpg">
-    <img src="rihanna.jpg">
+    <img alt="adele" src="adele.jpg">
+    <img alt="amanda" src="amanda.jpg">
+    <img alt="bella" src="bella.jpg">
+    <img alt="bieber" src="bieber.jpg">
+    <img alt="harry" src="harry.jpg">
+    <img alt="rihanna" src="rihanna.jpg">
   </div>
   <div class="column">
-    <img src="florence.jpg">
-    <img src="kaia.jpg">
-    <img src="simone.jpg">
-    <img src="billie.jpg">
-    <img src="amanda.jpg">
-    <img src="florence.jpg">
+    <img alt="florence" src="florence.jpg">
+    <img alt="kaia" src="kaia.jpg">
+    <img alt="simone" src="simone.jpg">
+    <img alt="billie" src="billie.jpg">
+    <img alt="amanda" src="amanda.jpg">
+    <img alt="florence" src="florence.jpg">
   </div>
   <div class="column">
-    <img src="lorde.jpg">
-    <img src="queen.jpg">
-    <img src="malala.jpg">
-    <img src="zendaya.jpg">
-    <img src="selena.jpg">
-    <img src="naomi.jpg">
-    <img src="paris.jpg">
+    <img alt="lorde" src="lorde.jpg">
+    <img alt="queen" src="queen.jpg">
+    <img alt="malala" src="malala.jpg">
+    <img alt="zendaya" src="zendaya.jpg">
+    <img alt="selena" src="selena.jpg">
+    <img alt="naomi" src="naomi.jpg">
+    <img alt="paris" src="paris.jpg">
   </div>
 
 </body>
