--- a/MADWORN/worn.html
+++ b/MADWORN/worn.html
@@ -4,13 +4,14 @@
   <title>MADWORN</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/err0gpa.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
 <div class="inline-flex2">
-  <a href="https://www.depop.com/madworn/" target="_blank" alt="DePop"><img id="depop" src="assets/depop.png"></a>
-  <a href="https://www.instagram.com/madsgallagher__/" target="_blank" alt="Instagram"><img id="insta" src="assets/instagram.png"></a>
-  <a href="https://www.linkedin.com/in/madison-gallagher-324627176/" target="_blank" alt="LinkedIn"><img id="linkedin" src="assets/linkedin.png"></a>
+  <a href="https://www.depop.com/madworn/" target="_blank"><img id="depop" src="assets/depop.png" alt="DePop"></a>
+  <a href="https://www.instagram.com/madsgallagher__/" target="_blank"><img id="insta" src="assets/instagram.png" alt="Instagram"></a>
+  <a href="https://www.linkedin.com/in/madison-gallagher-324627176/" target="_blank"><img id="linkedin" src="assets/linkedin.png" alt="LinkedIn"></a>
 </div>
 <br>
 <br>
@@ -26,105 +27,104 @@
 </ul>
 <hr>
 
-<section id="clothes">
-<script type="text/javascript" src="index.js"></script>
+<script src="index.js"></script>
 
 <main class="grid">
   <div class="container">
-  <img src="img/blue.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/blue.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/rvca.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/rvca.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/jacket.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/jacket.jpg" alt="Jacket">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/sisstr.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/sisstr.jpg" alt="Sweats">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/pants.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/pants.jpg" alt="Joggers">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-2.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-2.jpg" alt="LS Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-3.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-3.jpg" alt="Zip-Up">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-1.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-1.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-4.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-4.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-5.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-5.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-6.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-6.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-7.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-7.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-8.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-8.jpg" alt="Hoodie">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-9.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-9.jpg" alt="LS Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-10.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-10.jpg" alt="Top">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-11.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-11.jpg" alt="Shirt">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-13.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-13.jpg" alt="Hoodie">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-14.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-14.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-15.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-15.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-16.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-16.jpg" alt="Shirt">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-17.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-17.jpg" alt="Tee">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-18.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-18.jpg" alt="Crop">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-21.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-21.jpg" alt="Hoodie">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
   <div class="container">
-  <img src="img/image-22.jpg" alt="Sample photo">
-  <p id="demo" onclick="myFunction()">&hearts;</p>
+  <img src="img/image-22.jpg" alt="Top">
+  <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
 </main>
 </section>
