--- a/MADWORN/worn.html
+++ b/MADWORN/worn.html
@@ -127,9 +127,8 @@
   <i id="demo" onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 </div>
 </main>
-</section>
 
-<script type="text/javascript" src="index.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
